[package]
name = "e_include"
version = "0.1.0"
edition = "2024"

[dependencies]
anymap = { version = "0.12.1", default-features = false }
arrayvec = { version = "0.7.4" }
base64 = { version = "0.22.1" }
bitflags = { version = "2.9.0" }
bitvec = { version = "1.0.1" }
bytemuck = { version = "1.16.1", features = ["derive"] }
byteorder = { version = "1.4.3", default-features = true }
bytes = { version = "1.6.0" }
flate2 = { version = "1.0.30" }
gensym = { version = "0.1.1" }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
getrandom02 = { package="getrandom", version = "0.2", features = ["js"] }
hex = { version = "0.4.3" }
instant = { version = "0.1.11", features = ["wasm-bindgen"], default-features = false }
itertools = { version = "0.13.0" }
js-sys = { version = "0.3.66" }
lazy_static = { version = "1.4.0", default-features = false }
nanoserde = { version = "0.1.37" }
ordered-float = "5.1.0"
rand = { version = "0.9", default-features = false, features = ["small_rng"] }
regex = { version = "1.11.0" }
tinyvec = "1.9.0"
wasm-bindgen = { version = "0.2.106", default-features = false }
reqwest = "0.13.1"


# image = { version = "0.24.7", default-features = false, features = ["png", "qoi"] }
# rand_pcg = { version = "0.9.0" }
# serde_eetf = { path = "/r/code/8_fork/serde_eetf" }
# sha1 = { version = "0.10.6" }
# tar = { version = "0.4.38", default-features = false }
# url = { version = "2.5.3" }
# vte = { workspace = true }
# bzip2-rs = { version = "0.1.2" }
# chacha20 = { version = "0.9.1" }
# eetf = { path = "/r/code/8_fork/eetf" }
# erlang-term = { path = "/r/code/8_fork/erlang-term" }

[lib]
path = "./lib.rs"
