[package]
name = "c_ww_sheet"
version = "0.1.0"
edition = "2024"

[dependencies]
e_api = { path = "/r/code/rust/01_ext/99_e_api" }
web_common = { path = "/r/code/rust/79_client/09_c_web_common" }
wasm-bindgen = "0.2.106"
console_error_panic_hook = { version = "0.1.7", default-features = false }
c_app_msg = { path = "/r/code/rust/79_client/19_c_app_msg" }

ironcalc_base = { path = "/r/code/rust/91_fork/ironcalc_base"   }
xlsx = { path = "/r/code/rust/91_fork/xlsx" }

serde_json = "1.0.148"

# formualizer = { git = "https://github.com/tkxue/formualizer", default-features = false }
# formualizer-workbook = { git = "https://github.com/tkxue/formualizer/", default-features = false }


# formualizer-eval = { path = "/r/code/forks/formualizer/crates/formualizer-eval", default-features = false }
# formualizer-common = { path = "/r/code/forks/formualizer/crates/formualizer-common", default-features = false }


[lib]
path = "./lib.rs"