[package]
name = "c_html_gfx"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = { version = "0.33.3", features = ["color-hex"] }
eframe = { version = "0.33.3", default-features = true, features = ["wgpu", "persistence", "wgpu"] }
e_api = { path = "/r/code/rust/01_ext/99_e_api" }
c_app_msg = { path = "/r/code/rust/79_client/19_c_app_msg" }


wasm-bindgen = "0.2.106"
web_common = { path = "/r/code/rust/79_client/09_c_web_common" }
console_error_panic_hook = { version = "0.1.7", default-features = false }


c_egui_base =       { path = "/r/code/rust/79_client/50_c_egui_base" }
c_app_base =        { path = "/r/code/rust/79_client/60_c_app_base" }
c_app_repl =        { path = "/r/code/rust/79_client/61_c_app_repl" }
c_app_ssheet =      { path = "/r/code/rust/79_client/62_c_app_ssheet" }
c_app_present =     { path = "/r/code/rust/79_client/66_c_app_present" }


walkers = { version = "0.51.0", features = [] }
walkers_extras = { version = "0.51.0", features = [] }

async-oneshot = "0.5.9"

uuid = "1.19.0"

[lib]
path = "./lib.rs"