[package]
name = "s_app"
version = "0.1.0"
edition = "2024"

[dependencies]
foundationdb = { version = "0.10.0", default-features = false, features = ["fdb-7_3", "embedded-fdb-include"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
s_state = { path = "/r/code/rust/89_server/20_s_state" }
s_shared = { path = "/r/code/rust/89_server/10_s_shared" }
n_msg = { path = "/r/code/rust/29_net/99_n_msg" }


[lib]
path = "./lib.rs"
