[package]
name = "xlsx"
version = "0.6.0"
authors = ["Nicolás Hatcher <nicolas@theuniverse.today>"]
edition = "2021"
homepage = "https://www.ironcalc.com"
repository = "https://github.com/ironcalc/ironcalc/"
description = "The democratization of spreadsheets"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { version = "7.1.0", default-features = false, features = ["deflate"] }
roxmltree = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ironcalc_base = { path = "../ironcalc_base", version = "0.6" }
itertools = "0.12"
chrono = "0.4"
bitcode = "0.6.8"

[dev-dependencies]
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[lib]
name = "xlsx"
path = "src/lib.rs"

# [[bin]]
# name = "test"
# path = "src/bin/test.rs"
